--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@
             <h1> <img src="img/logo.png" alt="site de produtos"></h1>
             <nav class="menu">
                 <a href="#">HOME</a>
-                <a href="#">PRODUTOS</a>
-                <a href="#">CONTATOS</a>
+                <a href="#titulo-produtos">PRODUTOS</a>
+                <a href="#titulo-contato">CONTATOS</a>
             </nav>
 
         </header>
@@ -28,7 +28,7 @@
             <img src="img/seta-direita.png" alt="seta direita">
         </div>
         <div class="produtos">
-            <h2 class="titulo">PRODUTOS</h2>
+            <h2 class="titulo" id="titulo-produtos">PRODUTOS</h2>
             <div class="linha">
                 <div class="coluna">
                     <img src="img/produto.png" alt="produto">
@@ -65,7 +65,15 @@
                 </div>
             </div>
         </div>
+            <div class="contato">
+                <h2 class="titulo" id="titulo-contato">CONTATO</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7365.252248300709!2d-47.0534253575647!3d-22.630432597037245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8ec2e881850af%3A0x445a6211e9cf70bc!2sHolambra%2C%20SP%2C%2013825-000!5e0!3m2!1spt-BR!2sbr!4v1715293734242!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 
+            <footer class="rodape">
+                <img src="img/logo.png" alt="logotipo">
+                <a href="https://instagram.com"></a> <img src="img/instagram.png" alt="instagram">
+            </footer>
         
 
 
